; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_cmac_prov.c_cmac_free.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_cmac_prov.c_cmac_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmac_data_st = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @cmac_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmac_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.cmac_data_st*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.cmac_data_st*
  store %struct.cmac_data_st* %5, %struct.cmac_data_st** %3, align 8
  %6 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %7 = icmp ne %struct.cmac_data_st* %6, null
  br i1 %7, label %8, label %18

8:                                                ; preds = %1
  %9 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %10 = getelementptr inbounds %struct.cmac_data_st, %struct.cmac_data_st* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @CMAC_CTX_free(i32 %11)
  %13 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %14 = getelementptr inbounds %struct.cmac_data_st, %struct.cmac_data_st* %13, i32 0, i32 0
  %15 = call i32 @ossl_prov_cipher_reset(i32* %14)
  %16 = load %struct.cmac_data_st*, %struct.cmac_data_st** %3, align 8
  %17 = call i32 @OPENSSL_free(%struct.cmac_data_st* %16)
  br label %18

18:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @CMAC_CTX_free(i32) #1

declare dso_local i32 @ossl_prov_cipher_reset(i32*) #1

declare dso_local i32 @OPENSSL_free(%struct.cmac_data_st*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
